--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,19 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <style>
+      body{
+        background-color: wheat;
+      }
+      form[action="/posts"]{
+        width : 50%;
+
+        display : flex;
+        flex-direction : column;
+        gap : 7px;
+      }
+    </style>
+
   </head>
 
   <body>
