--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,9 @@
 <h1>Create a New Post</h1>
 
 <%= form_with model: @post do |form|%>
+	<label> Title : </label>
 	<%= form.text_field :title%>
-	<%= form.text_field :body%>
+	<label> Text : </label>
+	<%= form.text_area :body, size: "0x17"%>
 	<%= form.submit "Create Post"%>
 <%end%>
